--- a/WSProject1/app/templates/voice.html
+++ b/WSProject1/app/templates/voice.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <p>{{ data.Name }}</p>
 <p>Characters:</p>
 <table>
@@ -16,3 +19,5 @@
 </table> 
 
 <a href="http://127.0.0.1:8000/anime/random">Random</a>
+
+{% endblock %}
