--- a/WSProject1/app/templates/voice.html
+++ b/WSProject1/app/templates/voice.html
@@ -2,13 +2,19 @@
 
 {% block content %}
 <p>{{ data.Name }}</p>
-<p>Characters:</p>
-<table>
-	<tr>
-	  <th>Name</th>
-	  <th>Role</th>
-	  <th>Anime</th>
-	</tr>
+<div class="row">
+	{% for character in data.Characters %}
+		<div class="col-sm-3">
+			<div class="card border-primary mb-3" style="max-width: 18rem;">
+					<div class="card-header">Role: {{ character.Role }}</div>
+					<div class="card-body text-primary">
+					<h5 class="card-title">Name: {{ character.Name }}</h5>
+					<p class="card-text"><a href="{% url 'animeByName' title=character.Anime %}">{{ character.Anime }}</a></p>
+					</div>
+			</div>
+		</div>
+	{% endfor %}
+<!--</div>
 	{% for character in data.Characters %}
 		<tr>
 			<td>{{ character.Name }}</td>
@@ -17,7 +23,6 @@
 		</tr>
 	{% endfor %}
 </table> 
-
-<a href="http://127.0.0.1:8000/anime/random">Random</a>
+<a href="http://127.0.0.1:8000/anime/random">Random</a>-->
 
 {% endblock %}
