--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -7,7 +7,7 @@
 <head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#">AniN3</a>
+	<a class="navbar-brand" href="/">AniN3</a>
 	<form class="form-inline">
 		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
