--- a/WSProject1/app/templates/index.html
+++ b/WSProject1/app/templates/index.html
@@ -9,7 +9,35 @@
 	{% bootstrap_javascript %}
 <head>
 <link rel="stylesheet" href="{% static 'index.css' %}">
-  
+
+<section class="text-center pt-5">
+	<div class="container">
+	  <h1 class="jumbotron-heading">AniN3</h1>
+	  <p class="lead text-muted">An anime database based on N3 and GraphDB made by students in Universidade de Aveiro in context of the Web semantica classes</p>
+	  <p>
+		<form class="form-inline justify-content-center">
+			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-lg-0" type="submit">Search</button>
+		</form>
+	  </p>
+	</div>
+</section>
+
+<section>
+	<h2 class="pt-3">Top 10 Anime</h2>
+	<hr>
+	<div class="row">
+	<div class="col-sm-3">
+		<div class="card border-primary mb-3" style="max-width: 18rem;">
+				<div class="card-header">Role: </div>
+				<div class="card-body text-primary">
+				<h5 class="card-title">Name: </h5>
+				<p class="card-text"></p>
+				</div>
+		</div>
+	</div>
+</section>
+
 <div class="tree">
 	<ul>
 		<li>
