--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -4,6 +4,7 @@
 <head>
 	{% bootstrap_css %}
 	{% bootstrap_javascript %}
+	<link rel="stylesheet" href="{% static 'index.css' %}">
 <head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -21,11 +22,8 @@
 		  <a class="nav-link" href="http://127.0.0.1:8000/anime/random">Random</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">Tags</a>
+		  <a class="nav-link" href="http://127.0.0.1:8000/allgenres">Genres</a>
 		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Artists</a>
-		  </li>
 	  </ul>
 
 	</div>	  
