--- a/WSProject1/app/templates/index.html
+++ b/WSProject1/app/templates/index.html
@@ -14,9 +14,9 @@
 	  <h1 class="jumbotron-heading">AniN3</h1>
 	  <p class="lead text-muted">An anime database based on N3 and GraphDB made by students in Universidade de Aveiro in context of the Web semantica classes</p>
 	  <p>
-		<form class="form-inline justify-content-center">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-lg-0" type="submit">Search</button>
+		<form class="form-inline" method="get" action="{% url 'searchByName' %}">
+			<input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 		</form>
 	  </p>
 	</div>
