--- a/WSProject1/app/templates/search.html
+++ b/WSProject1/app/templates/search.html
@@ -41,7 +41,7 @@
 			<div class="card border-primary mb-3" style="max-width: 18rem;">
 					<div class="card-body text-dark">
 					<h5 class="card-title">Name: {{ va.VoiceActor }}</h5>
-                    <p class="card-text">Anime: {{ va.Title }}</p>	
+                    <p class="card-text">Anime: <a href="{% url 'animeTitle' title=va.Title %}">{{ va.Title }}</a></p>	
                 </div>
 			</div>
 		</div>
