--- a/WSProject1/app/templates/anime.html
+++ b/WSProject1/app/templates/anime.html
@@ -96,6 +96,21 @@
 </div>
 
 <script>
+	console.log('Teste')
+	const filename = 'data.json';
+	const jsonStr = JSON.stringify(data);
+
+	let element = document.createElement('a');
+	element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(jsonStr));
+	element.setAttribute('download', filename);
+
+	element.style.display = 'none';
+	document.body.appendChild(element);
+
+	element.click();
+
+	document.body.removeChild(element);
+
 	// Add an event listener to each navbar link
 	document.querySelectorAll('.nav-link').forEach(function(link) {
 	  link.addEventListener('click', function(event) {
