--- a/WSProject1/app/templates/insert.html
+++ b/WSProject1/app/templates/insert.html
@@ -20,6 +20,17 @@
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Add Anime</button>
+
   </form>
+  {% if error %}
+    <div class="alert alert-danger mt-3" role="alert">
+      Error: {{ error }}
+    </div>
+  {% elif success %}
+    <div class="alert alert-success mt-3" role="alert">
+      Success: {{ success }}
+    </div>
+  {% endif %}
+
 </div>
 {% endblock %}
