--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -1,5 +1,10 @@
+<script type="text/javascript" src="{{ STATIC_URL }} /static/jquery-3.6.4.js">
+</script>
+
 {% load static %}
 {% load bootstrap4 %}
+
+
 <head>
 	{% bootstrap_css %}
 	{% bootstrap_javascript %}
@@ -38,5 +43,4 @@
 <div class="container">
     {% block content %}
     {% endblock %}
-
 </div>
