--- a/WSProject1/app/templates/anime.html
+++ b/WSProject1/app/templates/anime.html
@@ -128,9 +128,10 @@
 	function download() {
 		console.log('Teste')
 		var data = "{{data}}";
+		var title= "{{data.title}}"
 		var data =  data.replaceAll("&#x27;", "'")
 		data = data.replaceAll("&quot;", "\"")
-		const filename = 'data.json';
+		const filename = title+'.json';
 		const jsonStr = JSON.stringify(data);
 		console.log(data);
 		console.log(jsonStr)
