--- a/WSProject1/app/templates/anime.html
+++ b/WSProject1/app/templates/anime.html
@@ -57,6 +57,95 @@
 			<hr>
 			<h4><a href="#" class="badge badge-dark">{{ data.made_by }}</a></h4>
 		</section>
+		<section>
+			<h2 class="pt-3">Themes</h2>
+			<hr>
+			<div class="row">
+			{% for g in data.theme %}
+				<div class="col-md-auto">
+					<h4><a href="{% url 'genreTitle' genre=g %}" class="badge badge-dark" >{{ g }}</a></h4>
+				</div>
+			{% endfor %}
+			</div>
+		</section>
+		<section>
+			<h2 class="pt-3">Other Information</h2>
+			<hr>
+			<div class="row">
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Type</h5>
+					  <p class="card-text">{{ data.type }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Number of Episodes</h5>
+					  <p class="card-text">{{ data.num_episodes }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Duration</h5>
+					  <p class="card-text">{{ data.duration }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Source</h5>
+					  <p class="card-text">{{ data.source }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Aired Date</h5>
+					  <p class="card-text">{{ data.aired_date }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Status</h5>
+					  <p class="card-text">{{ data.status }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Age Rating</h5>
+					  <p class="card-text">{{ data.age_rating }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Demographic</h5>
+					  <p class="card-text">{{ data.demographic }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Adapted From</h5>
+					  <p class="card-text">{{ data.adapted_from }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Voiced At</h5>
+					  <p class="card-text">{{ data.voiced_at }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Starring</h5>
+					  <p class="card-text">{{ data.starring }}</p>
+					</div>
+				</div>
+				<div class="card w-50">
+					<div class="card-body">
+					  <h5 class="card-title">Premiered</h5>
+					  <p class="card-text">{{ data.premiered }}</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</div>
 	<div id="characters" class="tab-pane fade" role="tabpanel">
 	</br>
@@ -126,15 +215,12 @@
 	  });
 	});
 	function download() {
-		console.log('Teste')
 		var data = "{{data}}";
 		var title= "{{data.title}}"
 		var data =  data.replaceAll("&#x27;", "'")
 		data = data.replaceAll("&quot;", "\"")
 		const filename = title+'.json';
 		const jsonStr = JSON.stringify(data);
-		console.log(data);
-		console.log(jsonStr)
 	
 		let element = document.createElement('a');
 		element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(jsonStr));
