--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -23,10 +23,10 @@
 	<div class="collapse navbar-collapse" id="navbarNav">
 	  <ul class="navbar-nav">
 		<li class="nav-item">
-		  <a class="nav-link" href="http://127.0.0.1:8000/anime/random">Random</a>
+		  <a class="nav-link" href="{% url 'randomAnime'%}">Random</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="http://127.0.0.1:8000/allgenres">Genres</a>
+		  <a class="nav-link" href="{% url 'getGenres'%}">Genres</a>
 		</li>
 	  </ul>
 
