--- a/WSProject1/app/templates/insert.html
+++ b/WSProject1/app/templates/insert.html
@@ -19,6 +19,34 @@
         <input type="text" class="form-control" id="id_score" name="score">
       </div>
     </div>
+    <div class="row mb-3">
+      <div class="col-sm-4">
+        <label for="id_numeps" class="form-label">Number of Episodes</label>
+        <input type="text" class="form-control" id="id_numeps" name="numeps">
+      </div>
+      <div class="col-sm-4">
+        <label for="id_rank" class="form-label">Rank</label>
+        <input type="text" class="form-control" id="id_rank" name="rank">
+      </div>
+      <div class="col-sm-4">
+        <label for="id_status" class="form-label">Status</label>
+        <input type="text" class="form-control" id="id_status" name="status">
+      </div>
+    </div>
+    <div class="row mb-3">
+      <div class="col-sm-4">
+        <label for="id_duration" class="form-label">Duration</label>
+        <input type="text" class="form-control" id="id_duration" name="duration">
+      </div>
+      <div class="col-sm-4">
+        <label for="id_studio" class="form-label">Studio</label>
+        <input type="text" class="form-control" id="id_studio" name="studio">
+      </div>
+      <div class="col-sm-4">
+        <label for="id_demo" class="form-label">Demographic</label>
+        <input type="text" class="form-control" id="id_demo" name="demo">
+      </div>
+    </div>
     <button type="submit" class="btn btn-primary">Add Anime</button>
 
   </form>
