--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<a class="navbar-brand" href="/">AniN3</a>
-	<form class="form-inline" method="get" action="{% url 'searchByName' %}">
+	<form class="form-inline" method="get" action="{% url 'searchByName' %}" style="padding-right: 10px;">
 		<input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
 		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 	</form>
@@ -22,18 +22,19 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'randomAnime'%}">Random</a>
+		<li style="padding-right: 10px;">
+			<div class="btn-nav"><a class="transparentButton" href="{% url 'randomAnime'%}">Random</a>
+			</div>
 		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'getGenres'%}">Genres</a>
+		<li>
+			<div class="btn-nav"><a class="transparentButton" href="{% url 'getGenres'%}">Genres</a>
+			</div>
 		</li>
 	  </ul>
-
 	</div>	  
 	<ul class="nav navbar-nav navbar-right">
 		<li>
-			<div class="btn-nav"><a class="btn btn-primary btn-small navbar-btn" href="/insert">Create</a>
+			<div class="btn-nav"><a class="btn btn-primary btn-small navbar-btn" href="{% url 'insertData' %}">Create</a>
 			</div>
 		</li>
 	</ul>
