--- a/WSProject1/app/templates/index.html
+++ b/WSProject1/app/templates/index.html
@@ -12,7 +12,7 @@
 <section class="text-center pt-5">
 	<div class="container">
 	  <h1 class="jumbotron-heading">AniN3</h1>
-	  <p class="lead text-muted">An anime database based on N3 and GraphDB made by students in Universidade de Aveiro in context of the Web semantica classes</p>
+	  <p class="lead text-muted">An anime database based on N3 and GraphDB made by students in Universidade de Aveiro in context of the Web Semântica classes</p>
 	  <p>
 		<form class="form-inline justify-content-center"  method="get" action="{% url 'searchByName' %}">
 			<input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
