--- a/WSProject1/app/templates/allgenre.html
+++ b/WSProject1/app/templates/allgenre.html
@@ -8,7 +8,7 @@
 		<div class="col-sm-3">
 			<div class="card border-primary mb-3" style="max-width: 18rem;">
 					<div class="card-body text-dark">
-					<h5 class="card-title">Genre: <a href="{% url 'genreTitle' genre=genre %}">{{ genre }}</a></h5>
+					<h5 class="card-title">Genre: <a href="{% url 'genreTitle' genre=genre %}" property="genre">{{ genre }}</a></h5>
 					</div>
 			</div>
 		</div>
