--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="{% static 'index.css' %}">
 <head>
 
+<body vocab="http://schema.org/">
+<div typeof="CreativeWork">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<a class="navbar-brand" href="/">AniN3</a>
 	<form class="form-inline" method="get" action="{% url 'searchByName' %}" style="padding-right: 10px;">
@@ -45,3 +47,6 @@
     {% block content %}
     {% endblock %}
 </div>
+
+</div>
+</body>
