added characters page

--- a/WSProject1/app/templates/base.html
+++ b/WSProject1/app/templates/base.html
@@ -28,8 +28,12 @@
 			<div class="btn-nav"><a class="transparentButton" href="{% url 'randomAnime'%}">Random</a>
 			</div>
 		</li>
-		<li>
+		<li style="padding-right: 10px;">
 			<div class="btn-nav"><a class="transparentButton" href="{% url 'getGenres'%}">Genres</a>
+			</div>
+		</li>
+		<li style="padding-right: 10px;">
+			<div class="btn-nav"><a class="transparentButton" href="{% url 'getCharacters'%}">Characters</a>
 			</div>
 		</li>
 	  </ul>
